# ChangeLog for net-www/mod_auth_kerb
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_kerb/ChangeLog,v 1.11 2006/04/27 22:21:05 antarus Exp $

  27 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-mod_auth_kerb-4.11, files/digest-mod_auth_kerb-4.11-r1,
  files/digest-mod_auth_kerb-5.0_rc6, Manifest:
  Fixing SHA256 digest, pass four

*mod_auth_kerb-5.0_rc7 (18 Apr 2006)

  18 Apr 2006; Michael Stewart <vericgar@gentoo.org>
  +mod_auth_kerb-5.0_rc7.ebuild:
  Version bump

  04 Mar 2005; Benedikt Boehm <hollow@gentoo.org>
  files/4.11-r1/11_mod_auth_kerb.conf:
  added default module config

  17 Feb 2005; Benedikt Boehm <hollow@gentoo.org>
  mod_auth_kerb-5.0_rc6.ebuild:
  added apache 1.3 support + clean up

*mod_auth_kerb-5.0_rc6 (30 Jan 2005)

  30 Jan 2005; Benedikt Boehm <hollow@gentoo.org>
  files/4.11-r1/11_mod_auth_kerb.conf, +mod_auth_kerb-5.0_rc6.ebuild:
  Bump to 5.0_rc6. Uses new apache.module.eclass

*mod_auth_kerb-4.11-r1 (09 Jan 2005)

  09 Jan 2005; Benedikt Boehm <hollow@gentoo.org> metadata.xml,
  +files/4.11-r1/11_mod_auth_kerb.conf, +mod_auth_kerb-4.11-r1.ebuild:
  Apache herd package refresh

  20 Jun 2004; Chuck Short <zul@gentoo.org> mod_auth_kerb-4.11.ebuild:
  Ebuild cleanups.

  04 Apr 2004; Chuck Short <zul@gentoo.org> mod_auth_kerb-4.11.ebuild:
  Added metadata.xml.

*mod_auth_kerb-4.11 (28 Nov 2002)

  28 Nov 2002; Donny Davies <woodchip@gentoo.org> :
  Initial import; created by me.