@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 11_mod_auth_kerb.conf 180 RMD160 57e08fb341a79457b30846723e57b363812682a8 SHA1 1ca6bd70da9eb49b8f55d8a5c768cd9e3ea0dca9 SHA256 bd8488de93178f3e6af11c6a2aff169ae463d38cef52908c9ecf3b9267220353 size 180
 MD5 c9bbfd002811a674505b3844837a63ee files/11_mod_auth_kerb.conf 180
 RMD160 57e08fb341a79457b30846723e57b363812682a8 files/11_mod_auth_kerb.conf 180
@@ -21,18 +24,18 @@ EBUILD mod_auth_kerb-4.11.ebuild 1079 RMD160 420a9fc95d8a6a2310ced17d5d053175d93
 MD5 305a2884f3d786ee45d11ca24a2f5859 mod_auth_kerb-4.11.ebuild 1079
 RMD160 420a9fc95d8a6a2310ced17d5d053175d932d99b mod_auth_kerb-4.11.ebuild 1079
 SHA256 7ed53fcb9ffef1513449a6c9027a0131e454364dcbf57ff1d1953433f25cf2b4 mod_auth_kerb-4.11.ebuild 1079
-EBUILD mod_auth_kerb-5.0_rc6.ebuild 1019 RMD160 a58e3b9b3ed57d9ff4a7c4187e82cfa541763000 SHA1 005fe428b5e739f79685dc648d6b33daa3b0e8e2 SHA256 fc21443ced9f8f98f5793b1739f3a95893c4128312762b7196c80685e74db7e3 size 1019
-MD5 fd00de2aa1d22981a01aaf63fc70082e mod_auth_kerb-5.0_rc6.ebuild 1019
-RMD160 a58e3b9b3ed57d9ff4a7c4187e82cfa541763000 mod_auth_kerb-5.0_rc6.ebuild 1019
-SHA256 fc21443ced9f8f98f5793b1739f3a95893c4128312762b7196c80685e74db7e3 mod_auth_kerb-5.0_rc6.ebuild 1019
+EBUILD mod_auth_kerb-5.0_rc6.ebuild 1017 RMD160 d14114b335311b11770c4136cd62b601a4f4ad25 SHA1 a60d1cc57dc8e03a5840f0a4ff679ed9e5c8135b SHA256 0f34bc7f2211fd9b52f5549e3f95f21731bf13844c9f167913a243df9b8362b8 size 1017
+MD5 96940b3fffb8e5bfc2332225156e4f9f mod_auth_kerb-5.0_rc6.ebuild 1017
+RMD160 d14114b335311b11770c4136cd62b601a4f4ad25 mod_auth_kerb-5.0_rc6.ebuild 1017
+SHA256 0f34bc7f2211fd9b52f5549e3f95f21731bf13844c9f167913a243df9b8362b8 mod_auth_kerb-5.0_rc6.ebuild 1017
 EBUILD mod_auth_kerb-5.0_rc7.ebuild 1018 RMD160 bae3edb3e45cad51695d6e3f7f809bcc9c0d97d9 SHA1 bba0c7e21224ab6f4b0d49dfd095a18659a11f35 SHA256 1e345bf155b7fd99274d452dd9797faca362ef2fd59526b96cb746ecdb0b66f4 size 1018
 MD5 ede0b3d8af8a9b150e3c1addc239c4fa mod_auth_kerb-5.0_rc7.ebuild 1018
 RMD160 bae3edb3e45cad51695d6e3f7f809bcc9c0d97d9 mod_auth_kerb-5.0_rc7.ebuild 1018
 SHA256 1e345bf155b7fd99274d452dd9797faca362ef2fd59526b96cb746ecdb0b66f4 mod_auth_kerb-5.0_rc7.ebuild 1018
-MISC ChangeLog 1517 RMD160 de5317163912e31614e26ce91f47f9752ad9ec5b SHA1 c6005e3c981060793f4f5e2f20bf1d12b5fb3146 SHA256 6b56006e0d7466d68b6345f66c0ae56ed3d29ef81b8cd4e424b60ba8f3107c32 size 1517
-MD5 0a7845232689b116fc4e3c9fcb0ce19b ChangeLog 1517
-RMD160 de5317163912e31614e26ce91f47f9752ad9ec5b ChangeLog 1517
-SHA256 6b56006e0d7466d68b6345f66c0ae56ed3d29ef81b8cd4e424b60ba8f3107c32 ChangeLog 1517
+MISC ChangeLog 1627 RMD160 2b58fbbd7924008757653689804ac78fa8ce743a SHA1 931f586d1ab28b550dd692a96bf3f5b519778f73 SHA256 74c45e0db477a132fe76d9691066fd7e133cb7a38aa802e0f2098bfa2dcf58b6 size 1627
+MD5 8b0d6f08b009591786dc36a997d0a0be ChangeLog 1627
+RMD160 2b58fbbd7924008757653689804ac78fa8ce743a ChangeLog 1627
+SHA256 74c45e0db477a132fe76d9691066fd7e133cb7a38aa802e0f2098bfa2dcf58b6 ChangeLog 1627
 MISC metadata.xml 226 RMD160 d11ce73e47adf4b3d91309ec6489fded2f4d4e0e SHA1 fe9f7ce6f2281683065abb3255c8b731665c82ac SHA256 376a327f91f69eb96f0c1b05cc1481dd7017a0570f631a03b1f6d14d58215ca8 size 226
 MD5 7272d8b6d09e3e301b6a08aa9c912eb0 metadata.xml 226
 RMD160 d11ce73e47adf4b3d91309ec6489fded2f4d4e0e metadata.xml 226
@@ -49,3 +52,10 @@ SHA256 b6392e5b1608dfcfb0632eaec96f533227c874ea1116a3ef4ed930bbc2aad86a files/di
 MD5 fc55498aaa35d757cea367eba2c831be files/digest-mod_auth_kerb-5.0_rc7 259
 RMD160 0f4f3f0812f45c3e16393cb17873f7d9cbb38eb2 files/digest-mod_auth_kerb-5.0_rc7 259
 SHA256 cfeffa27bace1ffa987700b0c868278af65e71c6b8265639e4ada382eeadf0b9 files/digest-mod_auth_kerb-5.0_rc7 259
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3 (GNU/Linux)
+
+iD8DBQFEZk/qCRZPokWLroQRAqjjAKDM0p/YyvFjDi86WfHRLQJmgWRdwwCg3cOM
+mUuozhEISdkUqHdbKIIYxLM=
+=xWZE
+-----END PGP SIGNATURE-----
