@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_kerb/mod_auth_kerb-5.0_rc6.ebuild,v 1.3 2005/07/14 22:11:40 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_kerb/mod_auth_kerb-5.0_rc6.ebuild,v 1.4 2006/05/13 21:30:08 halcy0n Exp $
 
 MY_PV=${PV/_rc/-rc}
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://modauthkerb.sourceforge.net/"
 SRC_URI="mirror://sourceforge/modauthkerb/${PN}-${MY_PV}.tar.gz"
 
 LICENSE="as-is"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE="apache2"
 SLOT="0"
 
