@@ -1,6 +1,10 @@
 # ChangeLog for net-www/mod_auth_kerb
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_kerb/ChangeLog,v 1.11 2006/04/27 22:21:05 antarus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_auth_kerb/ChangeLog,v 1.12 2006/05/13 21:30:08 halcy0n Exp $
+
+  13 May 2006; Mark Loeser <halcy0n@gentoo.org>
+  mod_auth_kerb-5.0_rc6.ebuild:
+  Stable on x86; bug #128189
 
   27 Apr 2006; Alec Warner <antarus@gentoo.org>
   files/digest-mod_auth_kerb-4.11, files/digest-mod_auth_kerb-4.11-r1,
